--- a/css/app.css
+++ b/css/app.css
@@ -40,11 +40,11 @@ h1 {
   text-align:center;
 }
 
-.footer {
-  margin-top: 60px;
+hr.footer {
+  margin-top: 100px;
 }
 footer {
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .background {
