--- a/css/app.css
+++ b/css/app.css
@@ -12,6 +12,7 @@ h1#logo {
   width: 170px;
   height: 140px;
   background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/logo.png");
+  cursor: pointer;
 }
 h1#logo span {
   display: none;
@@ -45,6 +46,7 @@ h1#logo span {
   height: 250px;
   border-radius: 6px;
   background-color: gray;
+  cursor: pointer;
 }
 #home h1 {
   width:100%;
@@ -54,16 +56,33 @@ h1#logo span {
   text-shadow: 0 1px 10px #fff;
 }
 #home .tratamentos-esteticos {
-  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/trat-laser-diodo.jpg");
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_55364368_t.jpg");
 }
 #home .rituais-spa {
-  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/trat-anti-acne.jpg");
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_55319875b_t.jpg");
 }
 #home .dermatologia {
-  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/trat-limpeza-hidra-pele.jpg");
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_33598795_t.jpg");
 }
-#home .outro {
-  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/trat-intra-mesoterapia.jpg");
+#home .pacotes {
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_73029259_t.jpg");
+}
+
+[id$="pic"] {
+  width: 570px;
+  height: 570px;
+}
+#clinica-pic {
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/tricologia.png");
+}
+#tratamento-pic {
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_12586174b.jpg");
+}
+#rituais-pic {
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_56302477.jpg");
+}
+#pacotes-pic {
+  background-image: url("file:///home/xavier/www/spanefertiti.com.br/img/shutterstock_73029259.jpg");
 }
 
 footer {
